[tool.poetry]
name = "reckon"
version = "0.1.0"
description = ""
authors = ["Llanero <iamllanero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
