[tool.poetry]
name = "reckon"
version = "0.1.0"
description = "Scripts to perform various calculations on cryptocurrency"
authors = ["Llanero <iamllanero@gmail.com>"]
readme = "README.md"


[tool.poetry.scripts]
wallets-build = "wallets:cmd_build"
wallets-flatten = "wallets:cmd_flatten"
txns = "txns:main"
txns_insert = "txns:cmd_init_override"
price = "price:main"
8949-hifo = "8949-hifo:main"
pf = "pf:main"


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
requests = "^2.28.1"
tomlkit = "^0.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
